--- a/MvcPlayground/Views/Web.config
+++ b/MvcPlayground/Views/Web.config
@@ -1,1 +1,7 @@
 ﻿<?xml version="1.0" encoding="UTF-8" ?>
+<add namespace="System.Web.Optimization" />
+ <add name="JavaScriptHandler"
+         path="*.js"
+         verb="*"
+         preCondition="integratedMode"
+         type="System.Web.StaticFileHandler" />
