--- a/MvcPlayground/MvcPlayground.csproj
+++ b/MvcPlayground/MvcPlayground.csproj
@@ -6,6 +6,8 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
+    <PackageReference Include="Microsoft.AspNet.Web.Optimization" Version="1.1.3" />
   </ItemGroup>
 
   <ItemGroup>
